[project]
name = ""
version = ""
description = ""
authors = [
    {name = "jefer94", email = "jdefreitaspinto@gmail.com"},
]
dependencies = [
    "pandas>=1.5.0",
    "jupyter>=1.0.0",
    "requests>=2.28.1",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
